Adding and updating indels and substitutions

--- a/models/bacterial.ipynb
+++ b/models/bacterial.ipynb
@@ -198,6 +198,67 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<Figure size 1170x827 with 0 Axes>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "import seaborn as sns\n",
+    "import matplotlib.pyplot as plt\n",
+    "# generate random vector of length 20, where the vector sums to 1\n",
+    "vector = np.random.dirichlet(np.ones(20),size=1)[0]\n",
+    "vector /= 5\n",
+    "vector[4] += 0.8\n",
+    "\n",
+    "\n",
+    "# draw the vector as a chart\n",
+    "sns.set_theme(style=\"whitegrid\")\n",
+    "sns.set(rc={'figure.figsize':(11.7,8.27)})\n",
+    "sns.set(font_scale=1.5)\n",
+    "\n",
+    "\n",
+    "sns.barplot(x=[i for i in range(20)], y=vector, color=\"g\")\n",
+    "\n",
+    "# scale y axis to have a max of 1 in the plot\n",
+    "plt.ylim(0, 1)\n",
+    "\n",
+    "plt.xlabel(\"Lineages\")\n",
+    "plt.ylabel(\"probability\")\n",
+    "plt.title(f\"Network output\")\n",
+    "plt.savefig(f\"random-vector2.png\")\n",
+    "#clear plt\n",
+    "plt.clf()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<Figure size 1170x827 with 0 Axes>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
