Building a more generic version of the system

--- a/models/lab.ipynb
+++ b/models/lab.ipynb
@@ -211,10 +211,67 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2x 2\n",
+      "1x 2\n",
+      "0x 2\n",
+      "2x 3\n",
+      "5x 1\n",
+      "5x 3\n",
+      "5x 4\n",
+      "5x 2\n",
+      "1x 1\n",
+      "0x 3\n"
+     ]
+    }
+   ],
+   "source": [
+    "import os\n",
+    "import glob\n",
+    "\n",
+    "# change names of models:\n",
+    "for dirpath in glob.glob(f\"data/covid19-1024examples/ml_models/*\"):\n",
+    "    _, encoder_repeats, coverage =dirpath.split(\"/\")[-1].split(\"-\")[0].split(\".\")\n",
+    "    coverage = coverage[:-1]\n",
+    "    second_dirpath = glob.glob(f\"{dirpath}/*\")[0]\n",
+    "    print(coverage, encoder_repeats)\n",
+    "    \n",
+    "    # if coverage = 5:\n",
+    "    # # change names of second directory\n",
+    "    # os.system(f\"mv {second_dirpath} {dirpath}/vit.{encoder_repeats}.{coverage}x\")\n",
+    "\n",
+    "    # # change names of first directory\n",
+    "    # os.system(f\"mv {dirpath} {'/'.join(dirpath.split('/')[:-1])}/vit.{encoder_repeats}.{coverage}x-vit\")\n",
+    "    \n",
+    "    # new_dirpath_name = "
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import tensorflow as tf\n",
+    "\n",
+    "fastq_data = tf.constant(\"\"\"@ENA|BS001393|BS001393.1-99\n",
+    "CCAAATATTTAATTGGTGGTGTTTTG\n",
+    "+\n",
+    "C1C1GGGGGGGGGGJJJJJJJJJJJGJ1JJJJJGJJJGGCGJJJ(GCGGCJJJJCGJJGGGGGJGGGGGGGJGCGGGGGGGGGGGG8GGGCGGGGGCCGGJCGCGGGCGGGCCCGGGGGCGGGCGGGGGGGGCGGGCGGGGG11GGGGGC\n",
+    "@ENA|BS001393|BS001393.1-98\n",
+    "AAAGTGATGTCAATGTCACTAACAAG\n",
+    "+\n",
+    "C=CGGG=GGGGGCJCJJGJGJCJJJJGGJGGJGJGJJGGJJGJJGJGJJJCG8JCGGGJCG=JJJCGGGGGGGCCC1G=GGCGGGGCGGCGGCGGCGGGC=CCGGGCGGCG8CGGCGGGGCGGCGGGG8CGCG===GCGCG=CGGG=GGG\n",
+    "@ENA|BS001393|BS001393.1-97\n",
+    "AATTCCATTGTTTGTAGATTTGACAC\n",
+    "+\"\"\")"
+   ]
   }
  ],
  "metadata": {
